test CityMapper add