@@ -12,7 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 @Service
 public class CityServiceImpl implements CityService {
@@ -49,10 +49,22 @@ public class CityServiceImpl implements CityService {
         logger.info("Получение списка городов");
         List<CityDTO> cities = cityRepository.findAll().stream()
                 .map(cityMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
         logger.info("Найденные города: {}", cities);
         return cities;
     }
+
+    @Override
+    public List<CityDTO> getAllCitiesWithAttractions() {
+        logger.info("Получение списка городов вместе с достопримечательностями");
+        List<City> cities = cityRepository.findAllWithAttractions();
+        List<CityDTO> cityDTOs = cities.stream()
+                .map(cityMapper::toDto)
+                .toList();
+        logger.info("Найденные города с достопримечательностями: {}", cityDTOs);
+        return cityDTOs;
+    }
+
 
     @Override
     public CityDTO updateCity(CityDTO cityDTO) {
